<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShareEase</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="text">Text</string>
    <string name="files">Files</string>
    <string name="share">Share</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="select_files">Select Files</string>
    <string name="enter_text">Enter text to share</string>
    <string name="no_wifi">No WiFi connection</string>
    <string name="server_started">Server started</string>
    <string name="server_stopped">Server stopped</string>
    <string name="connection_info">Connection Info</string>
    <string name="port">Port</string>
    <string name="ip_address">IP Address</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="transfer_progress">Transfer Progress</string>
    <string name="sending">Sending...</string>
    <string name="receiving">Receiving...</string>
    <string name="transfer_complete">Transfer Complete</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="permission_required">Permission Required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="remove">Remove</string>
    <string name="clear_all">Clear All</string>
    <string name="copy">Copy</string>
    <string name="share_via">Share via</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="send_files">Send Files</string>
    <string name="send_text">Send Text</string>
    <string name="receive_mode">Receive Mode</string>
    <string name="tap_to_scan">Tap to scan QR code</string>
    <string name="show_qr">Show QR Code</string>
    <string name="wifi_info">WiFi Info</string>
    <string name="connected_to">Connected to</string>
    <string name="no_device_found">No device found</string>
    <string name="searching">Searching...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>
